@@ -1,6 +1,7 @@
 Revision history for Pod-PseudoPod-LaTeX
 
 {{$NEXT}}
+    - pulled screen section changes from Moritz Lenz
 
 1.101060  Fri Apr 16 08:46:25 2010
     - added repository information to distribution, no functional changes
